# zk-elgamal-proof

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  main.yml  publish-js-client.yml  publish-js.yml  publish-rust.yml
clients-js/: package.json  pnpm-lock.yaml  tsconfig.declarations.json  tsconfig.json
clients-js/src/: constants.ts  index.ts
clients-js/test/: _setup.ts  closeContextState.test.ts  verifyBatchedGroupedCiphertext2HandlesValidity.test.ts  verifyBatchedGroupedCiphertext3HandlesValidity.test.ts  verifyBatchedRangeProofU128.test.ts  verifyBatchedRangeProofU256.test.ts  verifyBatchedRangeProofU64.test.ts  verifyCiphertextCiphertextEquality.test.ts  verifyCiphertextCommitmentEquality.test.ts  (+5 more)
interface/: Cargo.toml
interface/src/proof_data/: ciphertext_ciphertext_equality.rs  ciphertext_commitment_equality.rs  pubkey_validity.rs  zero_ciphertext.rs
interface/src/proof_data/batched_grouped_ciphertext_validity/: handles_2.rs
interface/src/proof_data/batched_range_proof/: batched_range_proof_u64.rs  mod.rs
interface/src/proof_data/grouped_ciphertext_validity/: handles_3.rs
program/: Cargo.toml
program/src/: instruction.rs  lib.rs  state.rs
program/src/proof_data/: mod.rs  percentage_with_cap.rs
program/src/proof_data/batched_grouped_ciphertext_validity/: handles_3.rs
program/src/proof_data/batched_range_proof/: batched_range_proof_u128.rs  batched_range_proof_u256.rs
program/src/proof_data/grouped_ciphertext_validity/: handles_2.rs
scripts/: cliff.toml  restart-test-validator.sh  solana.dic  start-validator.mjs  stop-validator.mjs  utils.mjs
zk-keygen/: Cargo.toml
zk-sdk/: Cargo.toml
zk-sdk-pod/: Cargo.toml
zk-sdk-pod/src/: errors.rs  lib.rs  macros.rs  range_proof.rs  sigma_proofs.rs
zk-sdk-pod/src/encryption/: auth_encryption.rs  elgamal.rs  grouped_elgamal.rs  mod.rs  pedersen.rs
zk-sdk-pod/src/proof_data/: ciphertext_ciphertext_equality.rs  ciphertext_commitment_equality.rs  mod.rs  percentage_with_cap.rs  pubkey_validity.rs  zero_ciphertext.rs
zk-sdk-pod/src/proof_data/batched_grouped_ciphertext_validity/: handles_2.rs  handles_3.rs
zk-sdk-pod/src/proof_data/batched_range_proof/: batched_range_proof_u128.rs  batched_range_proof_u256.rs  batched_range_proof_u64.rs  mod.rs
zk-sdk-pod/src/proof_data/grouped_ciphertext_validity/: handles_2.rs  handles_3.rs
zk-sdk-wasm/: Cargo.toml  build.sh  package.json
zk-sdk-wasm-js/: Cargo.toml  README.md  compile-wasm.sh  package.json
zk-sdk-wasm-js/examples/: integration.spec.js  playwright.config.js
zk-sdk-wasm-js/examples/node-integration/: README.md  index.test.js  package.json
zk-sdk-wasm-js/examples/vite-integration/: README.md  index.html  index.test.js  package.json  vite.config.js
zk-sdk-wasm-js/examples/web-integration/: README.md  index.html  index.test.js  package.json
zk-sdk-wasm-js/examples/webpack-integration/: README.md  package.json  webpack.config.js
zk-sdk-wasm-js/examples/webpack-integration/src/: index.html  index.test.js
zk-sdk-wasm-js/src/: lib.rs
zk-sdk-wasm-js/src/encryption/: auth_encryption.rs  derivation.rs  elgamal.rs  grouped_elgamal.rs  mod.rs  pedersen.rs
zk-sdk-wasm-js/src/proof_data/: ciphertext_ciphertext_equality.rs  ciphertext_commitment_equality.rs  mod.rs  percentage_with_cap.rs  pubkey_validity.rs  zero_ciphertext.rs
zk-sdk-wasm-js/src/proof_data/batched_grouped_ciphertext_validity/: handles_2.rs  handles_3.rs  mod.rs
zk-sdk-wasm-js/src/proof_data/batched_range_proof/: batched_range_proof_u128.rs  batched_range_proof_u256.rs  batched_range_proof_u64.rs  mod.rs
zk-sdk-wasm-js/src/proof_data/grouped_ciphertext_validity/: handles_2.rs  handles_3.rs  mod.rs
zk-sdk/farf/tmp/: test_write_keypair_file_overwrite_ok.json-xHyoZmq8NoW3vjJ988rfoxUUwtCLLjeHNIwnwBeujhI=
zk-sdk/farf/tmp/test_write_keypair_file_truncate.json-fNqbbOaE1Q3S/: fHuxsiQIwEFUQRrL7z9CEgpcfMHvxA=
zk-sdk/src/: errors.rs  lib.rs  transcript.rs
zk-sdk/src/encryption/: auth_encryption.rs  derivation.rs  discrete_log.rs  elgamal.rs  grouped_elgamal.rs  mod.rs  pedersen.rs
zk-sdk/src/encryption/pod/: auth_encryption.rs  elgamal.rs  grouped_elgamal.rs  pedersen.rs
zk-sdk/src/range_proof/: errors.rs  generators.rs  inner_product.rs  mod.rs  pod.rs  range.rs  range_proof.rs  util.rs
zk-sdk/src/sigma_proofs/: ciphertext_ciphertext_equality.rs  ciphertext_commitment_equality.rs  errors.rs  mod.rs  percentage_with_cap.rs  pod.rs  pubkey_validity.rs  zero_ciphertext.rs
zk-sdk/src/sigma_proofs/batched_grouped_ciphertext_validity/: handles_2.rs  handles_3.rs
zk-sdk/src/sigma_proofs/grouped_ciphertext_validity/: handles_2.rs  handles_3.rs
zk-sdk/src/zk_elgamal_proof_program/: ciphertext_ciphertext_equality.rs  ciphertext_commitment_equality.rs  errors.rs  instruction.rs  mod.rs  percentage_with_cap.rs  pubkey_validity.rs  state.rs  zero_ciphertext.rs
zk-sdk/src/zk_elgamal_proof_program/batched_grouped_ciphertext_validity/: handles_2.rs  handles_3.rs  mod.rs
zk-sdk/src/zk_elgamal_proof_program/batched_range_proof/: batched_range_proof_u128.rs  batched_range_proof_u256.rs  batched_range_proof_u64.rs  mod.rs
zk-sdk/src/zk_elgamal_proof_program/grouped_ciphertext_validity/: handles_2.rs  handles_3.rs  mod.rs
zk-sdk/src/zk_elgamal_proof_program/proof_data/: ciphertext_ciphertext_equality.rs  ciphertext_commitment_equality.rs  errors.rs  mod.rs  percentage_with_cap.rs  pod.rs  pubkey_validity.rs  zero_ciphertext.rs
zk-sdk/src/zk_elgamal_proof_program/proof_data/batched_grouped_ciphertext_validity/: handles_2.rs  handles_3.rs  mod.rs
zk-sdk/src/zk_elgamal_proof_program/proof_data/batched_range_proof/: batched_range_proof_u128.rs  batched_range_proof_u256.rs  batched_range_proof_u64.rs  mod.rs
zk-sdk/src/zk_elgamal_proof_program/proof_data/ciphertext_range_proof/: mod.rs  range_proof.rs
zk-sdk/src/zk_elgamal_proof_program/proof_data/grouped_ciphertext_validity/: handles_2.rs  handles_3.rs  mod.rs
(+98 files in other folders)
