[workspace]
resolver = "2"
members = ["interface", "zk-sdk", "zk-sdk-pod", "zk-sdk-wasm-js"]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/zk-elgamal-proof"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.dependencies]
aes-gcm-siv = { version = "0.11.1", default-features = false, features = ["aes", "alloc"] }
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.25.0"
bytemuck_derive = "1.10.2"
curve25519 = { package = "solana-ed25519", git = "https://github.com/anza-xyz/cryptography", rev = "0f7379cc057b1d7dfea5622a9cab015650387aa4", features = ["digest", "rand_core"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
itertools = "0.14.0"
js-sys = "0.3.77"
merlin = { version = "3", default-features = false }
num-derive = "0.4"
num-traits = "0.2"
rand = "0.10.0-rc.5"
serde = "1.0.228"
serde_derive = "1.0.219"
serde_json = "1.0.149"
sha3 = "0.11.0-rc.3"
solana-address = { version = "2.6.0", default-features = false }
solana-derivation-path = "3.0.0"
solana-instruction = "3.4.0"
solana-keypair = "3.1.2"
solana-nullable = "1.1.0"
solana-sdk-ids = "3.1.0"
solana-seed-derivable = "3.0.0"
solana-seed-phrase = "3.0.0"
solana-signature = { version = "3.4.0", default-features = false }
solana-signer = "3.0.0"
solana-zk-elgamal-proof-interface = { path = "interface", version = "0.1.0" }
solana-zk-sdk = { path = "zk-sdk", version = "5.0.1" }
solana-zk-sdk-pod = { path = "zk-sdk-pod", version = "0.1.0" }
solana-zk-sdk-wasm-js = { path = "zk-sdk-wasm-js", version = "0.1.0" }
subtle = "2.6.1"
thiserror = "2.0.18"
tiny-bip39 = { version = "2.0.0", default-features = false, features = ["default-langs"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
zeroize = { version = "1.8", default-features = false }

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

# Enable basic optimizations for unittests
[profile.test]
opt-level = 1

# Enable optimizations for procmacros for faster recompile
[profile.dev.build-override]
opt-level = 1

# solana-ed25519 uses the simd backend by default when available,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.solana-ed25519]
opt-level = 3
