[workspace]
resolver = "2"
members = ["interface", "zk-sdk", "zk-sdk-pod", "zk-sdk-wasm-js"]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/zk-elgamal-proof"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.dependencies]
aes-gcm-siv = "0.11.1"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bincode = "1.3.3"
bip39 = { version = "2.2.2", features = ["rand"] }
bytemuck = "1.25.0"
bytemuck_derive = "1.10.2"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
getrandom = "0.2"
hkdf = "0.13.0"
itertools = "0.15.0"
js-sys = "0.3.77"
merlin = { version = "3", default-features = false }
num-derive = "0.5"
num-traits = { version = "0.2", default-features = false }
rand = "0.8.6"
serde = { version = "1.0.228", default-features = false }
serde_derive = "1.0.219"
serde_json = "1.0.150"
sha2 = "0.11.0"
sha3 = "0.10.8"
shake = "0.1.0"
solana-address = { version = "2.5.0", default-features = false }
solana-derivation-path = "3.0.0"
solana-instruction = { version = "3.0.0", default-features = false }
solana-keypair = "3.0.1"
solana-nullable = "1.1.1"
solana-sdk-ids = "3.1.0"
solana-seed-derivable = "3.0.0"
solana-seed-phrase = "3.0.0"
solana-signature = { version = "3.1.0", default-features = false }
solana-signer = "3.0.0"
solana-zk-elgamal-proof-interface = { path = "interface", version = "0.1.0" }
solana-zk-sdk = { path = "zk-sdk", version = "7.0.0" }
solana-zk-sdk-pod = { path = "zk-sdk-pod", version = "0.1.2" }
solana-zk-sdk-wasm-js = { path = "zk-sdk-wasm-js", version = "0.1.0" }
subtle = "2.6.1"
thiserror = { version = "2.0.18", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
zeroize = { version = "1.8", default-features = false }

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

# Enable basic optimizations for unittests
[profile.test]
opt-level = 1

# Enable optimizations for procmacros for faster recompile
[profile.dev.build-override]
opt-level = 1

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3
