[package]
name = "solana-zk-elgamal-proof-interface"
description = "Solana ZK ElGamal Proof Interface"
documentation = "https://docs.rs/solana-zk-elgamal-proof-interface"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-instruction = { workspace = true }
solana-address = { workspace = true, features = ["bytemuck"] }
solana-sdk-ids = { workspace = true }
solana-zk-sdk-pod = { workspace = true }

[lints]
workspace = true

[package.metadata.solana]
program-id = "ZkE1Gama1Proof11111111111111111111111111111"
