[package]
name = "solana-zk-elgamal-proof-program"
description = "Solana ZK ElGamal Proof Program"
documentation = "https://docs.rs/solana-zk-elgamal-proof-program"
version = "0.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-instruction = { workspace = true, features = ["std"] }
solana-address = { workspace = true, features = ["bytemuck"] }
solana-sdk-ids = { workspace = true }

# `solana-zk-sdk` to be replaced by `solana-zk-sdk-pod` once it is split out
solana-zk-sdk = { workspace = true }

[lints]
workspace = true

[package.metadata.solana]
program-id = "ZkE1Gama1Proof11111111111111111111111111111"
