[package]
name = "solana-zk-pod"
description = "Solana ZK SDK Plain Old Data (Pod)"
documentation = "https://docs.rs/solana-zk-sdk-pod"
version = "0.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]

[lints]
workspace = true
