[package]
name = "solana-zk-sdk-pod"
description = "Solana ZK SDK Plain Old Data (Pod)"
documentation = "https://docs.rs/solana-zk-sdk-pod"
version = "0.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[features]
serde = ["dep:serde"]

[dependencies]
base64 = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
solana-zk-sdk = { workspace = true }
solana-zk-sdk-pod = { path = ".", features = ["serde"] }

[lints]
workspace = true
