[package]
name = "solana-zk-sdk"
description = "Solana ZK SDK"
documentation = "https://docs.rs/solana-zk-sdk"
version = "6.0.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
aes-gcm-siv = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
curve25519-dalek = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
merlin = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
solana-address = { workspace = true, features = ["bytemuck"] }
solana-derivation-path = { workspace = true }
solana-seed-derivable = { workspace = true }
solana-seed-phrase = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-zk-elgamal-proof-interface = { workspace = true }
solana-zk-sdk-pod = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }

[dev-dependencies]
solana-address = { workspace = true, features = ["atomic", "bytemuck"] }
solana-keypair = { workspace = true }
tiny-bip39 = { workspace = true }

[lints]
workspace = true
